<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Costco Stores</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="author_label">Author</string>
    <string name="author_email_label">e-mail</string>
    <string name="author_mobile_label">Mobile</string>
    <string name="author">Andres Mella Romero</string>
    <string name="author_email">andres.mella.romero@gmail.com</string>
    <string name="author_mobile">2223234504</string>
    <string name="title_activity_about">About</string>
    <string name="button_ok">OK</string>
    <string name="button_call">Call</string>
    <string name="pot">Public opening times</string>
    <string name="wkdays">Weekdays</string>
    <string name="wknd">Weekend</string>    
    <string name="button_image">Image</string>
    <string name="comment_ex">A great sale store, you can find anything you want at the best price</string>

</resources>
